--- a/report/biblio.bib
+++ b/report/biblio.bib
@@ -918,3 +918,30 @@
   langid = {english},
   file = {/home/artem/Zotero/storage/H2C8ZSWA/Ruppert and Matteson - 2015 - Statistics and Data Analysis for Financial Enginee.pdf}
 }
+
+@article{ramos-carrenoDcorDistanceCorrelation2023,
+  title = {Dcor: {{Distance}} Correlation and Energy Statistics in {{Python}}},
+  shorttitle = {Dcor},
+  author = {{Ramos-Carre{\~n}o}, Carlos and Torrecilla, Jos{\'e} L.},
+  year = {2023},
+  month = may,
+  journal = {SoftwareX},
+  volume = {22},
+  pages = {101326},
+  issn = {23527110},
+  doi = {10.1016/j.softx.2023.101326},
+  urldate = {2024-08-31},
+  langid = {english},
+  file = {/home/artem/Zotero/storage/6JJRQTU6/Ramos-Carreño and Torrecilla - 2023 - dcor Distance correlation and energy statistics i.pdf}
+}
+
+@techreport{szekelyEstatisticsEnergyStatistical2002,
+  title = {E-Statistics: {{The Energy}} of {{Statistical Samples}}},
+  shorttitle = {E-Statistics},
+  author = {Szekely, Gabor},
+  year = {2002},
+  institution = {Bowling Green State University},
+  urldate = {2024-08-31},
+  langid = {english},
+  file = {/home/artem/Zotero/storage/K4XUG4L4/Gabor Szekely - 2002 - E-statistics The Energy of Statistical Samples.pdf}
+}
